--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
     width: 100px; 
     height: 100px;
     background: red;
-    cursor: pointer
+    cursor: pointer;
 }
 .block2  {
     width: 100px; 
@@ -23,4 +23,22 @@
 .circle:active {
     border: 2px black solid;
     transform: scale(0.85);
+}
+h1 {
+    font-family: Georgia;
+    color: #303030;
+    font-size: 64;
+    background:#A3A3A3;
+    height: 75px;
+    transition: 0.9s ease-in-out;
+}
+h1:hover {
+transform: scale(1.1);
+}
+
+body {
+    font-size: 1.5vw;
+    background: black;
+    color: white;
+    
 }
